feat(api): complete school manager portal services
